# enterprise-ai-copilot

./: .env  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/routes/: auth.py  chat.py  documents.py
backend/app/core/: celery_app.py  config.py  logger.py
backend/app/db/: init_db.py  redis.py  session.py  vector.py
backend/app/db/models/: __init__.py  models.py
backend/app/schemas/: chat.py  user.py
backend/app/services/: document_processor.py  embeddings.py  extractor.py  rag.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Routes.tsx
frontend/src/features/auth/: Login.tsx  Register.tsx
frontend/src/features/chat/: ChatInterface.tsx  ChatLayout.tsx  Sidebar.tsx
frontend/src/features/documents/: DocumentManager.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
